// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag when is clickable should render with clickable styles 1`] = `
.circuit-0 {
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  display: inline-block;
  cursor: pointer;
}

.circuit-0:hover {
  background-color: #D8DDE1;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
}

<span
  className="circuit-0 circuit-1"
  onClick={[MockFunction]}
  selected={false}
>
  SomeTest
</span>
`;

exports[`Tag when is default should render with default styles 1`] = `
.circuit-0 {
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  display: inline-block;
}

<span
  className="circuit-0 circuit-1"
  selected={false}
>
  SomeTest
</span>
`;

exports[`Tag when is selected should change the close icon color 1`] = `
.circuit-6 {
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  display: inline-block;
  background-color: #3388FF;
  box-shadow: 0px 0px 0px 1px #3388FF;
  color: #FFFFFF;
}

.circuit-4 {
  padding: 0;
  margin: 0;
  display: inline-block;
  background-color: transparent;
  border: none;
  cursor: pointer;
  fill: #0F131A;
  overflow: initial;
  height: 16px;
  width: 16px;
  margin-left: 12px;
  vertical-align: middle;
}

.circuit-4:focus,
.circuit-4:active {
  outline: none;
}

.circuit-4 > svg {
  height: 100%;
  width: 100%;
}

.circuit-4 > svg {
  fill: #FFFFFF;
  vertical-align: inherit;
}

.circuit-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

<span
  className="circuit-6 circuit-7"
  selected={true}
>
  SomeTest
  <button
    className="circuit-2 circuit-3 circuit-4 circuit-5"
    onClick={[MockFunction]}
    selected={true}
    type="button"
  >
    <div>
      close-icon.svg
    </div>
    <span
      className="circuit-0 circuit-1"
    >
      remove
    </span>
  </button>
</span>
`;

exports[`Tag when is selected should change the given icon color 1`] = `
.circuit-2 {
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  display: inline-block;
  background-color: #3388FF;
  box-shadow: 0px 0px 0px 1px #3388FF;
  color: #FFFFFF;
}

.circuit-0 {
  margin-right: 4px;
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: middle;
}

.circuit-0 > svg {
  vertical-align: top;
}

.circuit-0 > svg {
  fill: #FFFFFF;
}

<span
  className="circuit-2 circuit-3"
  selected={true}
>
  <span
    className="circuit-0 circuit-1"
    selected={true}
  >
    <svg
      fill="#000000"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path />
    </svg>
  </span>
  SomeTest
</span>
`;

exports[`Tag when is selected should render with selected styles 1`] = `
.circuit-0 {
  border-radius: 4px;
  font-size: 16px;
  line-height: 24px;
  box-shadow: 0px 0px 0px 1px #D8DDE1;
  padding: 4px 12px;
  cursor: default;
  display: inline-block;
  background-color: #3388FF;
  box-shadow: 0px 0px 0px 1px #3388FF;
  color: #FFFFFF;
}

<span
  className="circuit-0 circuit-1"
  selected={true}
>
  SomeTest
</span>
`;
